--- a/MaterialDesignLibrary/build.gradle
+++ b/MaterialDesignLibrary/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.+'
+        classpath 'com.android.tools.build:gradle:3.1.0'
 // COMMENT TO DEVELOPER MODE / UNCOMMENT TO UPLOAD TO BINTARRAY
 //        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.3.5'
 //        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
@@ -16,6 +17,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         mavenCentral()
     }
 
